lab1/Test/L1-A-12-88.cmm
struct {
  int I , ALz8JCfFRsyq = Wp2KMZiEt3o0ZBnL9zga && H4GF1icdLmy 
    > ja0TDrUTU4z6vlx1hlaO - FI / - - ! HZOcKpYiJTcIaWzwftQp 
    ( iwL , ANPGhFDsR0 = fZaEkkEctQW = QAtOtnERn8S7T5 
    || tGzkWeBt4 * SrWDSAw2ELy2KPHDNc [ j4DP2kfrGz9rR5aGG5v 
    >= PLQ2N1h8bMyWA_ [ s7i_TSDuQ5NQHtM_ || Bzeapl30 < 
    rdh7u4qGyM - ( Kj2pK0km37qKdNTxVm7 != Nxbbb03UV7ELcn 
    ( B1 == kgVgm0glwbcdunjvteAI - ZGq / _6JiYCglKbv7k230_4FC 
    * ! ! 344551591 ) ) ] LOjTyDxs ( ) ] ) + - ! 1804348815.668513382 
    . RS7gSA6mL7H0Wn56 ;
}qxh8NcP8s ( int rZu9SX2HVk2fXw0ys , float T8AIDZEx5q 
  [ 240603213 ] ) }
struct TrpP3XOhIs8677g3 aAt , GfO_7reaGcGa 

;
int ;
int ;
int QijsGMOHS ( ) {
  vTIXkOrjt ;
  if ( HiUqQmY7teDz )   if ( DQ3HvVJ0kDJS7 )   if 
    ( NkO63fwx )   OBureq ;
else {
    int hEBlzWA4 ;
    struct mai_01s6_ {
    }g ;
{
    }  }
else   eHR ;


  while ( M9Vroc0PNU5T )   return NzSX1I1iZ250Epy4wFq 
    ;

  if ( eE12d )   XR ;
else   if ( tU_efLsa31YLNrgUUcOD ) {
  }

}
